<resources>
    <string name="app_name">AstonHomework3</string>
    <string name="add">Add</string>
    <string name="addContact">Добавить контакт</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InputName">Введите имя...</string>
    <string name="InputSurname">Введите фамилию...</string>
    <string name="InputPhoneNubmer">Введите номер...</string>
    <string name="justAdd">Добавить</string>
    <string name="saveChanges">Сохранить изменения</string>
    <string name="for_deleting_contacts">For deleting contacts</string>
    <string name="delete_contacts">Удалить контакты</string>
    <string name="cancel">Отменить</string>
</resources>